# ducktracker

./: .coverage  .gitignore  DESCRIPTION.md  README.md  ducktracker.toml.example  pyproject.toml
.github/workflows/: ci.yml  release.yml
migrations/: V1__initial_schema.sql.example
src/ducktracker/: __init__.py  __main__.py  backends.py  cli.py  config.py  connection.py  drift.py  initializer.py  migrator.py  models.py  resolver.py  sql_utils.py
src/ducktracker/history/: __init__.py  ducklake.py  postgres.py
src/ducktracker/introspection/: __init__.py  ducklake.py  postgres.py
src/ducktracker/templates/: .gitignore  README.md  ducktracker.ducklake-duckdb.toml  ducktracker.ducklake-postgres.toml  ducktracker.pg-duckdb.toml
tests/: conftest.py  test_backends.py  test_config.py  test_init.py  test_models.py  test_resolver.py
tests/cli/: conftest.py  test_baseline.py  test_create.py  test_drift.py  test_info.py  test_init_command.py  test_migrate.py  test_options.py  test_validate.py
tests/connection/: conftest.py  test_attach.py  test_connect.py  test_extensions.py
tests/drift/: conftest.py  test_detection.py  test_indexes.py  test_macros.py  test_procedures.py  test_sequences.py  test_tables.py  test_triggers.py  test_views.py
tests/history/: test_ducklake.py  test_postgres.py
tests/introspection/: test_ducklake.py  test_postgres.py
tests/migrator/: conftest.py  test_apply.py  test_apply_error_paths.py  test_checksums.py  test_sql_splitting.py  test_status.py
